fix minor layout problem

--- a/enews_generator.css
+++ b/enews_generator.css
@@ -23,6 +23,7 @@
   opacity: 0.5;
   padding: 10px;
   border-radius: 10px;
+  top: 80px;
 }
 .enews-label {
   margin-top: 300px;
